--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "antd": "^5.8.4",
+    "dompurify": "^3.0.5",
     "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-fast-marquee": "^1.6.0",
     "react-icons": "^4.10.1",
+    "react-mailchimp-subscribe": "^2.1.3",
     "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.0",
     "react-scroll": "^1.8.6",
